--- a/catalogo.html
+++ b/catalogo.html
@@ -132,7 +132,7 @@
                         </nav>
                     </div>
                 </div>
-
+            </div>
 
         </section>
         <!-- FOOTER -->
